🔥chore: Added User Module

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,19 @@
-ENVIRONMENT=dev
+APP_ENVIRONMENT=development
+APP_API_URL="http://5.161.73.67:3333/api"
+APP_SWAGGER_URL="api/docs"
+APP_PORT=3333
+APP_HOST_API=localhost
+APP_JWT_SECRET=GFNWURoYfgKp1g1xdQX7xzvStmTt4r8Mal
 
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=db_monalisa
-DB_USERNAME=leonardo
-DB_PASSWORD=vitruviano1822
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_DATABASE=database3
+MYSQL_ROOT=root
+MYSQL_ROOT_PASSWORD=cxPeWVstzIMgREwNqUTjhZik
+MYSQL_USER=root
+MYSQL_PASSWORD=cxPeWVstzIMgREwNqUTjhZik
 
-PA_EMAIL=admin@admin.com
-PA_PASSWORD=15041519
 
-HOST_API=http://localhost:3000/api
+# DATABASE_URL="file:./dev.db"
+DATABASE_URL="mysql://admin01:19372846@10.0.0.110:3306/dbcomsuporte"
 
-JWT_SECRET=vitruviano1822
